--- a/src/components/home_page/home_page.styles.css
+++ b/src/components/home_page/home_page.styles.css
@@ -32,6 +32,14 @@ body {
   border-radius: 12px;
 }
 
+@media (max-width: 991px) {
+  .currency-container {
+    flex-direction: column;
+    align-items: center;
+    height: 500px;
+  }
+}
+
 .rate-exchange-container {
   display: flex;
   flex-direction: column;
@@ -40,6 +48,13 @@ body {
   margin-top: 50px;
   margin-bottom: 50px;
   text-align: left;
+}
+
+@media (max-width: 991px) {
+  .rate-exchange-container {
+    margin-top: 35%;
+    margin-bottom: 0px;
+  }
 }
 
 .labelText {
@@ -67,6 +82,26 @@ body {
   text-align: left;
 }
 
+@media (max-width: 991px) {
+  .equality-exchange-container {
+    align-items: center;
+    margin-top: 0px;
+  }
+}
+
+.big-equality-container {
+  display: flex;
+  flex-direction: column;
+  height: 100px;
+  margin-bottom: 40px;
+}
+
+@media (max-width: 991px) {
+  .big-equality-container {
+    height: 100px;
+  }
+}
+
 .textExchange {
   font-size: 18px;
   color: gray;
@@ -75,11 +110,16 @@ body {
   margin-right: 5px;
 }
 
-.equaltyCurrency-container {
+.equalityCurrency-container {
   display: flex;
   flex-direction: column;
   justify-content: left;
-  margin: 0px 0px 0px 0px;
+}
+
+@media (max-width: 991px) {
+  .equalityCurrency-container {
+    margin-top: 0;
+  }
 }
 
 .information-container {
@@ -91,12 +131,25 @@ body {
   border-radius: 12px;
 }
 
-.date-information{
-    margin: 450px 0px 0px 60px;
-    height: 20px;
-    justify-content: left;
-    text-align: left;
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: rgb(128, 128, 128);
+@media (max-width: 991px) {
+  .equalityCurrency-container {
+    margin-top: 10px;
+  }
+}
+
+.date-information {
+  margin: 450px 0px 0px 60px;
+  height: 20px;
+  justify-content: left;
+  text-align: left;
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(128, 128, 128);
+}
+@media (max-width: 991px) {
+  .date-information {
+    margin-top: 600px;
+    align-items: center;
+    text-align: center;
+  }
 }
