--- a/src/components/select-exchange/select-exchange.styles.css
+++ b/src/components/select-exchange/select-exchange.styles.css
@@ -1,15 +1,20 @@
+.select-exchange-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .labelText {
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-bottom: 10px;
-    color: rgb(128, 128, 128);
-  }
-  
-  .box {
-    border: 1px solid gainsboro;
-    border-radius: 10px;
-    height: 40px;
-    width: 300px;
-    font-size: 15px;
-    font-weight: 400;
-  }
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 10px;
+  color: rgb(128, 128, 128);
+}
+
+.box {
+  border: 1px solid gainsboro;
+  border-radius: 10px;
+  height: 40px;
+  width: 300px;
+  font-size: 15px;
+  font-weight: 400;
+}
